fix: #1657 Standalone apps pages ui broken on ie11 (#1671)

--- a/packages/elements/src/styles/base/global.scss
+++ b/packages/elements/src/styles/base/global.scss
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import './colors.scss';
+@import './browser.scss';
 
 * {
   box-sizing: border-box !important;
@@ -27,4 +28,12 @@ del.del-diff {
   text-decoration: line-through;
   background-color: #fbb6c2;
   color: #555;
+}
+
+.flex-col-min-height {
+  //Fix flex column height bug in IE
+  //https://stackoverflow.com/a/43027202
+  @include for-ie-only {
+    min-height: 1px;
+  }
 }
