--- a/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
+++ b/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
@@ -18,7 +18,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  text-align: end;
+  text-align: right;
 }
 
 .tag {
